Adjusted fixed navbar to avoid avatar clipping

--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -5,6 +5,7 @@ article.tweet {
 }
 
 article.tweet header {
+  margin-top: 0px;
   background-color: #f4f1ec;
   display: flex;
   justify-content: space-between;
